[tool.poetry]
name = "isee"
version = "0.1.0"
description = "List import statements from all commits"
authors = ["Samuel Ky Lau <samuel.ky@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
PyDriller = "^2.1"
rich = "^12.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
