[tool.poetry]
name = "isee"
version = "0.1.1"
description = "List import statements from all commits"
authors = ["Samuel Ky Lau <samuel.ky@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
PyDriller = "^2.1"
rich = "^12.2.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
